--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,13 @@ out
 .DS_Store
 .eslintcache
 *.log*
+
+# Editor directories and files
+.vscode/*
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+.vscode/settings.json
