修改文件结构 放弃使用wrtc

--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "winston": "^3.17.0",
-    "winston-daily-rotate-file": "^5.0.0",
-    "wrtc": "^0.4.7"
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^2.0.0",
