--- a/src/config/TM_config.json
+++ b/src/config/TM_config.json
@@ -1,8 +1,8 @@
 {
   "network": {
     "signalingServer": {
-      "port": 3000,
-      "corsOrigin": "http://localhost:5173"
+      "url": "",
+      "port": 1145
     },
     "iceServers": [
       {
