初步测试与服务器通信

--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,5 @@
 shamefully-hoist=true
 unsafe-perm = true
 ignore-scripts = false
+electron_mirror="https://npmmirror.com/mirrors/electron/"
+electron_builder_binaries_mirror="https://npmmirror.com/mirrors/electron-builder-binaries/"
