--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^4.0.0",
     "@electron/remote": "^2.1.2",
-    "@primevue/themes": "^4.3.2",
+    "@primeuix/themes": "^1.0.0",
+    "@tailwindcss/vite": "^4.0.14",
     "pinia": "^3.0.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.2",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "tailwindcss": "^4.0.14",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
@@ -37,7 +39,7 @@
     "@primevue/auto-import-resolver": "^4.3.2",
     "@types/webrtc": "^0.0.45",
     "@vitejs/plugin-vue": "^5.2.1",
-    "electron": "^34.2.0",
+    "electron": "^34.3.3",
     "electron-builder": "^25.1.8",
     "electron-vite": "^3.0.0",
     "eslint": "^9.20.1",
