--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "primeicons": "^7.0.0",
     "primevue": "^4.3.2",
     "socket.io-client": "^4.8.1",
-    "winston": "^3.17.0",
-    "winston-daily-rotate-file": "^5.0.0"
+    "vee-validate": "^4.15.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^2.0.0",
