--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "@electron-toolkit/utils": "^4.0.0",
     "@electron/remote": "^2.1.2",
     "@primeuix/themes": "^1.0.0",
+    "@primevue/forms": "^4.3.2",
     "pinia": "^3.0.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.2",
     "socket.io-client": "^4.8.1",
-    "vee-validate": "^4.15.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
@@ -44,6 +44,7 @@
     "eslint-plugin-vue": "^9.32.0",
     "tailwindcss": "^4.0.14",
     "unplugin-vue-components": "^28.4.1",
+    "v8-compile-cache": "^2.4.0",
     "vite": "^6.1.0",
     "vue": "^3.5.13"
   },
