--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "primeicons": "^7.0.0",
     "primevue": "^4.3.2",
     "socket.io-client": "^4.8.1",
+    "vue-router": "4",
     "yup": "^1.6.1"
   },
   "devDependencies": {
