--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@tailwindcss/vite": "^4.0.14",
     "@types/webrtc": "^0.0.45",
     "@vitejs/plugin-vue": "^5.2.1",
+    "@vue/devtools": "^7.7.2",
     "electron": "^34.3.3",
     "electron-builder": "^25.1.8",
     "electron-vite": "^3.0.0",
