--- a/src/config/TM_config.json
+++ b/src/config/TM_config.json
@@ -9,9 +9,8 @@
         "urls": [
           "stun:stun.l.google.com:19302",
           "stun:global.stun.twilio.com:3478",
-          "stun:stun.mozilla.org:3478"
-        ],
-        "timeout": 3
+          "stun:stun.qq.com:3478"
+        ]
       }
     ]
   },
